# pytorch-pixel-art-course

./: .gitignore  PROGRESS.md  README.md  pyproject.toml
day_01_intro_tensors/: 01_creating_basic_tensors.py  02_checking_tensor_attributes.py  03_specifying_data_type.py  04_optional_tensor_from_numpy.py  README.md  guide_01_creating_basic_tensors.md  guide_02_checking_tensor_attributes.md  guide_03_specifying_data_type.md  guide_04_optional_tensor_from_numpy.md
day_02_tensor_ops/: 01_indexing_slicing.py  02_reshaping_tensors.py  03_tensor_arithmetic.py  04_broadcasting.py  05_matrix_multiplication.py  06_aggregation_functions.py  07_optional_inplace_ops.py  README.md  guide_01_indexing_slicing.md  guide_02_reshaping_tensors.md  guide_03_tensor_arithmetic.md  guide_04_broadcasting.md  guide_05_matrix_multiplication.md  guide_06_aggregation_functions.md  guide_07_optional_inplace_ops.md
day_03_autograd/: 01_basic_autograd.py  02_autograd_multiple_variables.py  03_gradient_accumulation.py  04_disabling_gradients.py  05_optional_grad_fn.py  README.md  guide_01_basic_autograd.md  guide_02_autograd_multiple_variables.md  guide_03_gradient_accumulation.md  guide_04_disabling_gradients.md  guide_05_optional_grad_fn.md
day_04_nn_module/: 01_defining_simple_module.py  02_instantiating_using_model.py  03_adding_non_linearity.py  04_multi_layer_network.py  05_inspecting_parameters.py  06_optional_sequential.py  README.md  guide_01_defining_simple_module.md  guide_02_instantiating_using_model.md  guide_03_adding_non_linearity.md  guide_04_multi_layer_network.md  guide_05_inspecting_parameters.md  guide_06_optional_sequential.md
day_05_datasets_dataloaders/: 01_creating_custom_dataset.py  02_applying_transforms.py  03_dataset_splitting.py  04_using_dataloader.py  05_dataloader_options.py  06_optional_num_workers.py  README.md  guide_01_creating_custom_dataset.md  guide_02_applying_transforms.md  guide_03_dataset_splitting.md  guide_04_using_dataloader.md  guide_05_dataloader_options.md  guide_06_optional_num_workers.md
day_06_training_loop/: 01_setup_components.py  02_implementing_training_loop.py  03_setup_components_binary_classification.py  04_implementing_training_loop_binary.py  05_visualizing_loss.py  06_experimenting_learning_rate.py  07_optional_different_optimizer.py  08_optional_tensorboard.py  README.md  guide_01_setup_components.md  guide_02_implementing_training_loop.md  guide_03_setup_components_binary_classification.md  (+5 more)
(+30 files in other folders)
