[project]
name = "pytorch-pixel-art-course"
version = "1.1.1"
description = "Repository for the PyTorch Pixel Art Course."
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "torchvision",
    "matplotlib",
    "tensorboard",
    "rich",
    "black",
    "isort",
    # Add other dependencies here as needed
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "day_01_intro_tensors",
    "day_02_tensor_ops",
    "day_03_autograd",
    "day_04_nn_module",
    "day_05_datasets_dataloaders",
    "day_06_training_loop",
    "day_07_evaluation_improvement",
    "day_08_gpu_performance",
    "day_09_capstone_project"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88 